Bug 188447 - Crash when adjusting the max upload speed from systray menu
Summary: Crash when adjusting the max upload speed from systray menu
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Unspecified
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 191984 192004 192174 192573 196073 196655 200344 200725 200727 201727 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-30 06:30 UTC by Frederik Schwarzer
Modified: 2009-07-28 18:11 UTC (History)
12 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frederik Schwarzer 2009-03-30 06:30:11 UTC
Version:           3.2 (using KDE 4.2.1)
Installed from:    Debian testing/unstable Packages

There were 12 torrents running.
Ktorrent main window was shown.
I right-clicked on the systray icon and chose a higher upload speed (from 15 to 30).
KTorrent crashed with the following backtrace (not cleanly reproducable):

Application: KTorrent (ktorrent), signal SIGSEGV
0x00007fe085a918d1 in nanosleep () from /lib/libc.so.6
Current language:  auto; currently c
[Current thread is 0 (LWP 2436)]

Thread 3 (Thread 0x7fe07733d950 (LWP 2449)):
#0  net::DownloadThread::waitForSocketReady (this=0x6c7bb0, timeout=<value optimized out>) at ../../libbtcore/net/downloadthread.cpp:152
#1  0x00007fe088f2dd8c in net::DownloadThread::update (this=0x7fe0891f19a0) at ../../libbtcore/net/downloadthread.cpp:53
#2  0x00007fe088f2e7d9 in net::NetworkThread::run (this=0x6c7bb0) at ../../libbtcore/net/networkthread.cpp:48
#3  0x00007fe087194802 in QThreadPrivate::start (arg=0x6c7bb0) at thread/qthread_unix.cpp:189
#4  0x00007fe082745faa in start_thread (arg=<value optimized out>) at pthread_create.c:297
#5  0x00007fe085ac12cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#6  0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fe076b3c950 (LWP 2450)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:261
#1  0x00007fe0871957f9 in QWaitCondition::wait (this=0x6c8528, mutex=0x6c8530, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:87
#2  0x00007fe088f2d694 in net::UploadThread::update (this=0x6c84c0) at ../../libbtcore/net/uploadthread.cpp:73
#3  0x00007fe088f2e7d9 in net::NetworkThread::run (this=0x6c84c0) at ../../libbtcore/net/networkthread.cpp:48
#4  0x00007fe087194802 in QThreadPrivate::start (arg=0x6c84c0) at thread/qthread_unix.cpp:189
#5  0x00007fe082745faa in start_thread (arg=<value optimized out>) at pthread_create.c:297
#6  0x00007fe085ac12cd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#7  0x0000000000000000 in ?? ()
Current language:  auto; currently c++

Thread 1 (Thread 0x7fe0892f9750 (LWP 2436)):
[KCrash Handler]
#5  0x00007fe086ae900e in QMenu::findIdForAction (this=0x83f1e0, act=0x8425f0) at widgets/qmenu.cpp:3157
#6  0x00007fe086aea51b in QMenuPrivate::activateCausedStack (this=0x8410c0, causedStack=@0x7fff9142c7c0, action=0x8425f0, action_e=QAction::Trigger, self=176) at widgets/qmenu.cpp:965
#7  0x00007fe086af064e in QMenuPrivate::activateAction (this=0x8410c0, action=0x8425f0, action_e=QAction::Trigger, self=true) at widgets/qmenu.cpp:1058
#8  0x00007fe088209431 in KMenu::mouseReleaseEvent (this=0x83f1e0, e=0x7fff9142d2e0) at ../../kdeui/widgets/kmenu.cpp:454
#9  0x00007fe0867137cf in QWidget::event (this=0x83f1e0, event=0x7fff9142d2e0) at kernel/qwidget.cpp:7516
#10 0x00007fe086af2e0b in QMenu::event (this=0x83f1e0, e=0x7fff9142d2e0) at widgets/qmenu.cpp:2351
#11 0x00007fe0866c267d in QApplicationPrivate::notify_helper (this=0x6ed230, receiver=0x83f1e0, e=0x7fff9142d2e0) at kernel/qapplication.cpp:4084
#12 0x00007fe0866cafca in QApplication::notify (this=<value optimized out>, receiver=0x83f1e0, e=0x7fff9142d2e0) at kernel/qapplication.cpp:3786
#13 0x00007fe08813911b in KApplication::notify (this=0x7fff9142e040, receiver=0x83f1e0, event=0x7fff9142d2e0) at ../../kdeui/kernel/kapplication.cpp:307
#14 0x00007fe08727cc4c in QCoreApplication::notifyInternal (this=0x7fff9142e040, receiver=0x83f1e0, event=0x7fff9142d2e0) at kernel/qcoreapplication.cpp:602
#15 0x00007fe0866ca218 in QApplicationPrivate::sendMouseEvent (receiver=0x83f1e0, event=0x7fff9142d2e0, alienWidget=0x0, nativeWidget=0x83f1e0, buttonDown=<value optimized out>, 
    lastMouseReceiver=@0x7fe087124eb0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#16 0x00007fe086733e64 in QETWidget::translateMouseEvent (this=0x83f1e0, event=<value optimized out>) at kernel/qapplication_x11.cpp:4359
#17 0x00007fe086732de8 in QApplication::x11ProcessEvent (this=0x7fff9142e040, event=0x7fff9142dc70) at kernel/qapplication_x11.cpp:3543
#18 0x00007fe08675afa4 in x11EventSourceDispatch (s=0x6e5740, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#19 0x00007fe081e98e4a in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#20 0x00007fe081e9c510 in ?? () from /usr/lib/libglib-2.0.so.0
#21 0x00007fe081e9c6ac in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#22 0x00007fe0872a629f in QEventDispatcherGlib::processEvents (this=0x6d3e20, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:323
#23 0x00007fe08675a74f in QGuiEventDispatcherGlib::processEvents (this=0x83f1e0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#24 0x00007fe08727b4f2 in QEventLoop::processEvents (this=<value optimized out>, flags={i = -1857888416}) at kernel/qeventloop.cpp:149
#25 0x00007fe08727b8bd in QEventLoop::exec (this=0x7fff9142dfa0, flags={i = -1857888336}) at kernel/qeventloop.cpp:200
#26 0x00007fe08727db84 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:880
#27 0x0000000000423deb in main (argc=2, argv=0x7fff9142ec98) at ../../ktorrent/main.cpp:170
Current language:  auto; currently asm
#0  0x00007fe085a918d1 in nanosleep () from /lib/libc.so.6
Current language:  auto; currently c
Comment 1 Joris Guisson 2009-04-06 13:34:50 UTC
SVN commit 949983 by guisson:

Fix crash when changing speed limits using system tray menu 

BUG: 188447


 M  +3 -0      ChangeLog  
 M  +0 -2      ktorrent/trayicon.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=949983
Comment 2 Ben Aceler 2009-05-05 10:42:01 UTC
Same here with download speed on KDE 4.2.2. Should I open a new bug?
Comment 3 Frederik Schwarzer 2009-05-05 12:15:41 UTC
KTorrent is not shipped with the KDE releases. You have to wait for the next KTorrent release to have this bug fixed.

Unfortunately there is no release date set on
http://techbase.kde.org/Schedules/Extragear
so I do not know when this will be.

So please do not open another report. :)
Comment 4 Dario Andres 2009-05-08 02:41:32 UTC
*** Bug 191984 has been marked as a duplicate of this bug. ***
Comment 5 Joris Guisson 2009-05-08 09:40:46 UTC
*** Bug 192004 has been marked as a duplicate of this bug. ***
Comment 6 Joris Guisson 2009-05-10 10:11:54 UTC
*** Bug 192174 has been marked as a duplicate of this bug. ***
Comment 7 Joris Guisson 2009-05-13 17:18:10 UTC
*** Bug 192573 has been marked as a duplicate of this bug. ***
Comment 8 maui.bugzilla@mailnull.com 2009-05-27 03:45:33 UTC
How do we do to update it from SVN or somewhere else? Thanks.
Comment 9 Frederik Schwarzer 2009-05-27 13:15:19 UTC
You can still set the speed in the configuration dialog so it is not worth the effort.

If you are interested nevertheless, read http://ktorrent.org/wiki/index.php/FAQ#How_do_I_get_the_latest_code.2C_and_how_do_I_compile_it_.3F
Comment 10 Juha Tuomala 2009-05-27 13:36:31 UTC
(In reply to comment #9)
> You can still set the speed in the configuration dialog so it 
> is not worth the effort.

You think that shipping a broken, crashing program in distros for 
months or years is just okay then? I'm sorry but I don't agree on that.
Comment 11 Frederik Schwarzer 2009-05-27 13:57:44 UTC
I do not agree on that either. :)
1. I do not speak for the KTorrent team; it's just my personal opinion

The KTorrent team is not responsible for what distributions ship. The patch to fix this is there (the link above). The distro's packagers can fetch it and ship it.
"not worth the effort" meant that it can be a bit tricky to get a self-compiled version running properly due to the environment settings. The FAQ installs it into /usr, which is (in my opinion) not what most of the users want. Those who know what they are doing also know how to install an app into a less harmful location, those who do not, better use the packages distos provide.
If you want your distro to fix the issue, point their packagers (bugtracker) to this report so they even _know_ that there is a problem.

Another nuance in "not worth the effort" was that there might be another buxfix release coming soon (just a feeling, not knowing though) ...

And finally ... just press Ctrl+L in KTorrent to have a more quick access to the speed settings.

So, solutions are there. All work-aroun'ish but still. :)
Comment 12 Joris Guisson 2009-05-27 18:42:38 UTC
A bugfix release is not far off, just need to backport one fix. It will probably happen next weekend or early next week. The bugfix release was planned for some time now, but haven't had the time to finalize it and release it.

>> You can still set the speed in the configuration dialog so it 
>> is not worth the effort.
>
> You think that shipping a broken, crashing program in distros for 
> months or years is just okay then? I'm sorry but I don't agree on that.

I don't make a new release for every minor fix (and this is a minor fix). If this was a major issue, then a release would have followed pretty soon after the bugfix.
Comment 13 Dario Andres 2009-06-12 00:20:32 UTC
*** Bug 196073 has been marked as a duplicate of this bug. ***
Comment 14 Dario Andres 2009-06-15 21:46:21 UTC
*** Bug 196655 has been marked as a duplicate of this bug. ***
Comment 15 Dario Andres 2009-07-15 20:27:17 UTC
*** Bug 200344 has been marked as a duplicate of this bug. ***
Comment 16 Joris Guisson 2009-07-19 10:37:51 UTC
*** Bug 200727 has been marked as a duplicate of this bug. ***
Comment 17 Joris Guisson 2009-07-19 10:38:35 UTC
*** Bug 200725 has been marked as a duplicate of this bug. ***
Comment 18 Joris Guisson 2009-07-28 10:03:08 UTC
*** Bug 201727 has been marked as a duplicate of this bug. ***
Comment 19 Kill100 2009-07-28 18:11:17 UTC
All thanks. 
If it was a duplicate of bug apologize. 
I badly speak English. 
And was not able to read all bygi.

################Original Text(Исходный текст)###################
Всем спасибо.
Если это был дубликат бага прошу прощения.
Я плохо владею английским языком.
И не смог прочитать все быги.