Fix crash when changing speed limits using system tray menu

BUG: 188447

svn path=/branches/stable/extragear-kde4/network/ktorrent/; revision=949983